<resources>

    <!--To Do text-->
    <string name="to_do_title">To-Do</string>
    <string name="add_to_do">Add another To-Do</string>
    <string name="save_to_do">Save</string>
    <string name="add_text">Add what you have to do:</string>
    <string name="list_of_to_do">What you have to do:</string>

    <!--Edit text-->
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="close_text">Close</string>
    <string name="edit_text_title">Select what you want to do:</string>
    <string name="apply_text">Apply</string>
    <string name="cancel_text">Cancel</string>

    <!--API text-->
    <string name="dad_jokes_name">Dad jokes</string>
    <string name="get_dad_joke">Get a dad joke</string>
    <string name="chuck_fact_name">Chuck Norris facts</string>
    <string name="get_chuck_fact">Get a Chuck Norris fact</string>

    <!--Other -->
    <string name="application_title">Application</string>

</resources>