<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/transparent"
    android:backgroundTintMode="src_over"
    tools:ignore="UnusedAttribute">

    <androidx.cardview.widget.CardView
        android:id="@+id/selected_item_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/selected_text_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/selected_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:autofillHints="Your text"
                    android:background="@drawable/rectangle"
                    android:fontFamily="@font/patrick_hand_sc"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:padding="5dp"
                    android:singleLine="false"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/selected_text_edit_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/patrick_hand_sc"
                    android:text="To Do Task"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="HardcodedText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/editing_options_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/white"
                android:fontFamily="@font/patrick_hand_sc"
                android:text="@string/edit_text_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selected_text_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/edit_text_main_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editing_options_title">

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#C06C84"
                    android:fontFamily="@font/patrick_hand_sc"
                    android:text="@string/edit_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:backgroundTint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/delete_button" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#C06C84"
                    android:fontFamily="@font/patrick_hand_sc"
                    android:text="@string/delete_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:backgroundTint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#C06C84"
                    android:fontFamily="@font/patrick_hand_sc"
                    android:text="@string/close_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:backgroundTint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/delete_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/edit_text_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editing_options_title">

                <Button
                    android:id="@+id/apply_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#C06C84"
                    android:fontFamily="@font/patrick_hand_sc"
                    android:text="@string/apply_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:backgroundTint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#C06C84"
                    android:fontFamily="@font/patrick_hand_sc"
                    android:text="@string/cancel_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:backgroundTint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>